[package]
name = "logos-math"
version = "0.1.0"
authors = ["Damian Grüner <grunerdamian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
lalrpop-util = "0.19.5"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
lalrpop = "0.19.5"
